v1.0.14: Language selection v2.0 (Single static file (lang.js) instead of dynamic loading(lang.de.js and lang.en.js)) Updated language file from NIVUS. VOLUMENEINHEITEN was split into VOLUMEN EINHEITEN for fitting the string better in the frame. Fix for Failed error message not showing the error type. GREEN button colour swapped to NIVUS BLUE. Page reloads after disconnect (for clearing paired bluetooth info cache and to get the latest device name). New language strings added.

--- a/css/jquery-impromptu.css
+++ b/css/jquery-impromptu.css
@@ -63,7 +63,7 @@ div.jqi .jqibuttons{
 div.jqi .jqibuttons button{ 
 	margin: 20px;
 	padding: 15px 20px;
-	background-color: #33B34A;
+	background-color: #0096DC;
 	font-family:'Segoe UI SemiBold';  
 	font-size: 24pt;
 	font-weight: 500; 
